--- a/src/components/styles/secondContentStyles.css
+++ b/src/components/styles/secondContentStyles.css
@@ -1,64 +1,58 @@
-.second-content {
-  color: black;
-  /* font-family: "Poppins", sans-serif; */
-  margin: 0;
-}
-
-p {
-  margin: 0 0 13px 0;
-}
-
-a {
-  color: black;
-}
-
 .container {
+  height: 100%;
   width: 100%;
-  max-width: 1220px;
-  margin: 0 auto;
 }
 
-.episode {
+.profile-container {
+  align-self: end;
+}
+
+.profile {
   display: grid;
-  grid-template-columns: 1fr 3fr;
-  position: relative;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(6, 5rem);
+  row-gap: 10px;
 }
 
-.episode__number {
-  font-size: 10vw;
-  font-weight: 600;
-  padding: 10px 0;
-  position: sticky;
-  top: 0;
-  /* text-align: center; */
-  height: calc(10vw + 20px);
-  transition: all 0.2s ease-in;
+.profile h4 {
+  font-size: 25px;
+  font-weight: 500;
 }
 
-.episode__content {
-  border-top: 2px solid #fff;
+.profile-container__title {
+  grid-column-start: 1;
+  grid-column-end: 3;
+}
+
+.profile-intro {
+  align-self: end;
+  justify-self: center;
+  grid-column-start: 7;
+  grid-column-end: -1;
+  border-bottom: 3px solid black;
+}
+
+.profile-about {
+  font-size: 2rem;
+  line-height: 1.1em;
+  grid-column-start: 1;
+  grid-column-end: 8;
+  grid-row-start: 2;
+}
+
+/* about button */
+.profile-button {
+  grid-row-start: 4;
+}
+
+.profile-button__text {
+  font-size: 1.4rem;
+  border-bottom: 3px solid black;
+}
+
+/* Projects */
+.projects-container {
   display: grid;
-  grid-template-columns: 1fr 4fr;
-  grid-gap: 10px;
-  padding: 15px 0;
-}
-
-.episode__content .title {
-  font-weight: 600;
-}
-
-.episode__content .story {
-  line-height: 15px;
-}
-
-@media (max-width: 600px) {
-  .episode__content {
-    grid-template-columns: 1fr;
-  }
-}
-
-@media (max-width: 576px) {
-  .episode__content .story {
-    font-size: 15px;
-  }
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(6, 5rem);
 }
