--- a/src/components/styles/secondContentStyles.css
+++ b/src/components/styles/secondContentStyles.css
@@ -56,3 +56,40 @@
   grid-template-columns: repeat(7, 1fr);
   grid-template-rows: repeat(6, 5rem);
 }
+
+.project {
+}
+
+.project-number {
+  font-size: 25px;
+  font-weight: 500;
+}
+
+.project-title {
+  grid-column-start: 7;
+  grid-column-end: -1;
+}
+
+.project-title__text {
+}
+
+.project-intro-text {
+  font-size: 25px;
+  font-weight: 500;
+  border-bottom: 3px solid black;
+}
+
+/* image container */
+.project-firstImage {
+  background-color: aqua;
+  width: 100%;
+  height: 100%;
+  /* grid-column-start: 1;
+  grid-column-end: 6;
+  grid-row-start: 2;
+  grid-row-end: -1; */
+}
+
+.iosImage {
+  object-fit: scale-down;
+}
