--- a/src/components/styles/secondContentStyles.css
+++ b/src/components/styles/secondContentStyles.css
@@ -1,6 +1,7 @@
 .container {
   height: 100%;
   width: 100%;
+  position: relative;
 }
 
 .profile-container {
@@ -54,7 +55,8 @@
 .projects-container {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
-  grid-template-rows: repeat(6, 5rem);
+  /* grid-template-rows: repeat(2, 200px); */
+  /* grid-template-rows: 200px; */
 }
 
 .project {
@@ -80,16 +82,95 @@
 }
 
 /* image container */
-.project-firstImage {
-  background-color: aqua;
-  width: 100%;
-  height: 100%;
-  /* grid-column-start: 1;
-  grid-column-end: 6;
-  grid-row-start: 2;
-  grid-row-end: -1; */
+.project-images {
+  margin-top: 3rem;
+  display: grid;
+  /* width: 100%;
+  height: 100%; */
+  width: 100vw;
+  height: 100vh;
+  grid-template-columns: 800px;
+  grid-template-rows: repeat(3, 600px);
+  row-gap: 2rem;
 }
 
-.iosImage {
-  object-fit: scale-down;
+.image {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.circle {
+  height: 150px;
+  width: 150px;
+  background-color: rgb(236, 229, 229);
+  border-radius: 50%;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.image-text {
+  position: absolute;
+  width: 100%;
+  text-align: center;
+  font-size: 1.9rem;
+  line-height: 1.4em;
+  font-weight: 100;
+}
+
+/* about */
+.about {
+  margin-top: 3rem;
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(6, 5rem);
+  row-gap: 20px;
+  height: 100%;
+}
+
+.about-number {
+  font-size: 25px;
+  font-weight: 500;
+}
+
+.about-title {
+  grid-column-start: 7;
+  justify-self: center;
+}
+
+.about-intro-text {
+  font-size: 25px;
+  font-weight: 500;
+  border-bottom: 3px solid black;
+}
+
+.about-points {
+  grid-column-start: 1;
+  grid-column-end: 7;
+}
+
+.about-content__point {
+  font-size: 1.75rem;
+  line-height: 1.8rem;
+}
+
+.about-content__point {
+  grid-column-start: 1;
+  grid-column-end: 7;
+  grid-row-start: 4;
+}
+
+.about-content__point span {
+  font-size: 1.5rem;
+  line-height: 1rem;
 }
