--- a/src/components/styles/headerStyles.css
+++ b/src/components/styles/headerStyles.css
@@ -31,13 +31,14 @@
   display: none;
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 1100px) {
   .large-header {
     padding-top: 2.625rem;
     display: grid;
-    grid-template-columns: repeat(13, 1fr);
+    /* grid-template-columns: repeat(13, 1fr); */
+    grid-template-columns: repeat(13, minmax(0, 13));
     column-gap: 1rem;
-    font-size: 1.375rem;
+    font-size: 1.8rem;
     line-height: 25px;
   }
 
@@ -68,9 +69,9 @@
 }
 
 .header-nav {
-  grid-column-start: 10;
+  grid-column-start: 9;
   grid-column-end: 14;
-  justify-self: flex-end;
+  justify-self: end;
 }
 
 .header-nav__item {
