--- a/src/components/styles/secondContentStyles.css
+++ b/src/components/styles/secondContentStyles.css
@@ -5,13 +5,15 @@
 }
 
 .profile-container {
-  align-self: end;
+  /* align-self: end; */
 }
 
 .profile {
   display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  grid-template-rows: repeat(6, 5rem);
+  /* grid-template-columns: repeat(7, 1fr); */
+  grid-template-columns: repeat(7, minmax(auto-fit, 1fr));
+  /* grid-template-rows: repeat(6, 5rem); */
+  grid-template-rows: repeat(6, minmax(2rem, 5rem));
   row-gap: 10px;
 }
 
@@ -37,13 +39,14 @@
   font-size: 2rem;
   line-height: 1.1em;
   grid-column-start: 1;
-  grid-column-end: 8;
+  grid-column-end: 4;
   grid-row-start: 2;
+  grid-row-end: minmax();
 }
 
 /* about button */
 .profile-button {
-  grid-row-start: 4;
+  grid-row-start: 5;
 }
 
 .profile-button__text {
@@ -132,10 +135,10 @@
 .about {
   margin-top: 3rem;
   display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  grid-template-rows: repeat(6, 5rem);
+  /* grid-template-columns: repeat(7, 1fr); */
+  /* grid-template-rows: repeat(6, 5rem); */
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   row-gap: 20px;
-  height: 100%;
 }
 
 .about-number {
@@ -157,14 +160,14 @@
 .about-points {
   grid-column-start: 1;
   grid-column-end: 7;
+  grid-row-start: 2;
+}
+.about-points > span {
 }
 
 .about-content__point {
   font-size: 1.75rem;
   line-height: 1.8rem;
-}
-
-.about-content__point {
   grid-column-start: 1;
   grid-column-end: 7;
   grid-row-start: 4;
@@ -173,4 +176,40 @@
 .about-content__point span {
   font-size: 1.5rem;
   line-height: 1rem;
+}
+
+@media (min-width: 1100px) {
+  .profile {
+    display: grid;
+    grid-template-columns: repeat(13, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+  }
+  .profile-about {
+    font-size: 3rem;
+    grid-column-start: 3;
+    grid-column-end: 13;
+    grid-row-start: 2;
+    grid-row-end: 3;
+  }
+  .profile-container {
+    grid-row-start: 2;
+    grid-column-start: 1;
+    align-self: none;
+  }
+  .profile-button {
+    grid-column-start: 4;
+    grid-column-end: 5;
+    grid-row-start: 3;
+    justify-self: center;
+    align-self: center;
+  }
+
+  .profile-button {
+    grid-column-start: 3;
+    justify-self: start;
+  }
+  .profile-button__text {
+    font-size: 2.5rem;
+    border-bottom: 5px solid black;
+  }
 }
