--- a/src/components/styles/contentStyles.css
+++ b/src/components/styles/contentStyles.css
@@ -1,8 +1,7 @@
 .content {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
-  grid-template-rows: repeat(6, 1fr);
-  min-height: 785px;
+  grid-template-rows: repeat(4, 1fr);
   margin-top: 100px;
   row-gap: 20px;
 }
@@ -46,6 +45,7 @@
 }
 
 .name-first {
+  background-color: yellow;
 }
 .name-last {
 }
@@ -79,8 +79,7 @@
     line-height: 7rem;
   }
 
-  .name-first > span,
-  .name-last > span {
+  .name span {
     font-size: 8rem;
     font-weight: 500;
     line-height: 7rem;
