--- a/src/components/styles/footerStyle.css
+++ b/src/components/styles/footerStyle.css
@@ -1,17 +1,17 @@
 .footer-container {
-  /* display: grid; */
-  /* grid-template-columns: auto-fit, minmax(300px, 1fr); */
   display: grid;
   grid-template-columns: repeat(8, 1fr);
   margin-top: 25rem;
   row-gap: 1rem;
+  margin-bottom: 3rem;
 }
 
 .footer-left,
 .footer-middle,
 .footer-right {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   line-height: 2rem;
+  font-weight: lighter;
 }
 
 .footer-middle__socialMedia > li {
@@ -55,4 +55,39 @@
 
 .footer-right > span {
   display: block;
+}
+
+@media (min-width: 1100px) {
+  .footer-container {
+    display: grid;
+    /* grid-template-columns: repeat(auto-fill, minmax(500px, 1fr)); */
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .footer-right,
+  .footer-middle,
+  .footer-left {
+    font-size: 1.6rem;
+    line-height: 2rem;
+  }
+
+  .footer-right {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    justify-self: right;
+    margin: 0;
+    text-align: right;
+  }
+
+  .footer-middle {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    justify-self: center;
+    align-self: end;
+  }
+
+  .footer-left {
+    grid-column-start: 1;
+    grid-column-end: 2;
+  }
 }
