--- a/src/components/styles/secondContentStyles.css
+++ b/src/components/styles/secondContentStyles.css
@@ -10,11 +10,10 @@
 
 .profile {
   display: grid;
-  /* grid-template-columns: repeat(7, 1fr); */
   grid-template-columns: repeat(7, minmax(auto-fit, 1fr));
-  /* grid-template-rows: repeat(6, 5rem); */
   grid-template-rows: repeat(6, minmax(2rem, 5rem));
   row-gap: 10px;
+  /* position: fixed; */
 }
 
 .profile h4 {
@@ -47,6 +46,7 @@
 /* about button */
 .profile-button {
   grid-row-start: 5;
+  grid-column-start: 3;
 }
 
 .profile-button__text {
@@ -55,24 +55,19 @@
 }
 
 /* Projects */
+
 .projects-container {
   display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  /* grid-template-rows: repeat(2, 200px); */
-  /* grid-template-rows: 200px; */
-}
-
-.project {
+  grid-template-rows: repeat(auto-fill, minmax (250px, 1fr));
 }
 
 .project-number {
   font-size: 25px;
   font-weight: 500;
 }
-
 .project-title {
-  grid-column-start: 7;
-  grid-column-end: -1;
+  margin-bottom: 10rem;
+  grid-column-start: 2;
 }
 
 .project-title__text {
@@ -85,25 +80,6 @@
 }
 
 /* image container */
-.project-images {
-  margin-top: 3rem;
-  display: grid;
-  /* width: 100%;
-  height: 100%; */
-  width: 100vw;
-  height: 100vh;
-  grid-template-columns: 800px;
-  grid-template-rows: repeat(3, 600px);
-  row-gap: 2rem;
-}
-
-.image {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
 .image img {
   width: 100%;
@@ -111,24 +87,10 @@
   object-fit: cover;
 }
 
-.circle {
-  height: 150px;
-  width: 150px;
-  background-color: rgb(236, 229, 229);
-  border-radius: 50%;
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.image-text {
-  position: absolute;
-  width: 100%;
-  text-align: center;
-  font-size: 1.9rem;
-  line-height: 1.4em;
-  font-weight: 100;
+.image-info {
+  font-size: 2rem;
+  line-height: 2.5rem;
+  margin-bottom: 10rem;
 }
 
 /* about */
@@ -148,7 +110,8 @@
 
 .about-title {
   grid-column-start: 7;
-  justify-self: center;
+  /* justify-self: center; */
+  align-self: center;
 }
 
 .about-intro-text {
@@ -196,20 +159,27 @@
     grid-column-start: 1;
     align-self: none;
   }
-  .profile-button {
-    grid-column-start: 4;
-    grid-column-end: 5;
-    grid-row-start: 3;
-    justify-self: center;
-    align-self: center;
-  }
 
   .profile-button {
-    grid-column-start: 3;
+    grid-row-start: 4;
+    grid-column-start: 12;
     justify-self: start;
   }
   .profile-button__text {
     font-size: 2.5rem;
     border-bottom: 5px solid black;
+  }
+
+  /*titles*/
+  .about-title,
+  .project-title {
+    font-size: 3rem;
+  }
+
+  /* images */
+  .image {
+    max-width: 75%;
+  }
+  .image img {
   }
 }
