--- a/src/components/styles/headerStyles.css
+++ b/src/components/styles/headerStyles.css
@@ -3,6 +3,7 @@
   grid-template-columns: repeat(6, 1fr);
   padding-top: 42px;
   line-height: 1.4rem;
+  position: relative;
   text-decoration-style: solid;
   text-decoration-color: rgb(225, 223, 221);
 }
@@ -23,12 +24,42 @@
   font-size: 22px;
 }
 
+.header-menu__logo {
+  text-decoration: none;
+  color: inherit;
+}
+
 .header_menu span {
 }
 
 /* large header */
 .large-header {
   display: none;
+}
+
+/* sidebar */
+.sidebar {
+  background-color: #060b26;
+  width: 250px;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: -100%;
+  transition: 850ms;
+  z-index: 100;
+}
+
+.sidebar-active {
+  background-color: red;
+  width: 100vw;
+  height: 100vh;
+  z-index: 100;
+  position: absolute;
+  padding-left: 0;
+  transform: matrix(1, 0, 0, 1, 0, 0);
+  right: 0px;
 }
 
 @media (min-width: 1100px) {
