finished contact page, working on about page

--- a/src/components/HomeComponents/styles/footerStyle.css
+++ b/src/components/HomeComponents/styles/footerStyle.css
@@ -1,8 +1,8 @@
 .footer-container {
   display: grid;
   grid-template-columns: repeat(8, 1fr);
-  margin-top: 25rem;
   row-gap: 1rem;
+  padding-bottom: 44px;
 }
 
 .footer-left,
