--- a/src/components/HomeComponents/styles/headerStyles.css
+++ b/src/components/HomeComponents/styles/headerStyles.css
@@ -13,6 +13,7 @@
   color: inherit;
   line-height: 23px;
 }
+
 .header_logo {
   grid-column: 1/3;
 }
@@ -168,12 +169,18 @@
     /* grid-template-columns: repeat(13, 1fr); */
     grid-template-columns: repeat(13, minmax(0, 13));
     column-gap: 1rem;
-    font-size: 1.8rem;
+    /* font-size: 1.8rem; */
+    font-size: 1.4rem;
     line-height: 25px;
   }
 
   /* hidden elements */
   .header {
     display: none;
+  }
+
+  .header-name a {
+    text-decoration: none;
+    color: inherit;
   }
 }
