--- a/src/components/AboutComponents/styles/about.css
+++ b/src/components/AboutComponents/styles/about.css
@@ -24,7 +24,6 @@
 .about-image-container {
   grid-column-start: 1;
   grid-column-end: 6;
-  border: 3px solid blue;
 }
 
 .about-image__1 {
@@ -34,13 +33,21 @@
   margin-top: 2rem;
 }
 
-.about-image__1 img {
+.about-image__1 div {
+  background-color: lightgray;
+  width: 100%;
+  height: 100%;
+  /* text-align: center; */
+  vertical-align: center;
+}
+
+/* .about-image__1 img {
   height: 100%;
   width: 100%;
   object-fit: cover;
   max-width: 100%;
   filter: grayscale(100%);
-}
+} */
 
 .about-image-container p {
   font-size: 1.2rem;
@@ -72,4 +79,4 @@
   margin-bottom: 0;
 }
 
-/* Personal Section */
+/* Personal Section SERVICES*/
