--- a/src/components/HomeComponents/styles/headerStyles.css
+++ b/src/components/HomeComponents/styles/headerStyles.css
@@ -7,15 +7,15 @@
   text-decoration-color: rgb(225, 223, 221);
 }
 
+.header_logo {
+  grid-column: 1/3;
+}
+
 .header__name {
   font-size: 22px;
   text-decoration: none;
   color: inherit;
   line-height: 23px;
-}
-
-.header_logo {
-  grid-column: 1/3;
 }
 
 .header_menu {
@@ -27,6 +27,10 @@
 .header-menu__logo {
   text-decoration: none;
   color: inherit;
+}
+
+.header-menu__logo span {
+  z-index: 101;
 }
 
 .header_menu span {
