--- a/src/components/HomeComponents/styles/headerStyles.css
+++ b/src/components/HomeComponents/styles/headerStyles.css
@@ -5,6 +5,15 @@
   line-height: 1.4rem;
   text-decoration-style: solid;
   text-decoration-color: rgb(225, 223, 221);
+  position: fixed;
+  top: 0;
+  width: 100%;
+  padding-right: 50px;
+  z-index: 101;
+}
+
+body:not(.header) {
+  padding: 0 20px;
 }
 
 .header_logo {
