--- a/src/components/AboutComponents/styles/about.css
+++ b/src/components/AboutComponents/styles/about.css
@@ -27,27 +27,17 @@
 }
 
 .about-image__1 {
-  height: 400px;
-  max-width: 475px;
+  height: 440px;
+  max-width: 600px;
   margin-bottom: 2rem;
   margin-top: 2rem;
 }
 
-.about-image__1 div {
-  background-color: lightgray;
+.about-image__1 img {
   width: 100%;
   height: 100%;
-  /* text-align: center; */
-  vertical-align: center;
-}
-
-/* .about-image__1 img {
-  height: 100%;
-  width: 100%;
   object-fit: cover;
-  max-width: 100%;
-  filter: grayscale(100%);
-} */
+}
 
 .about-image-container p {
   font-size: 1.2rem;
@@ -81,10 +71,17 @@
 
 /* Personal Section SERVICES*/
 .personal-container {
-  border: 2px solid purple;
   grid-column-start: 1;
   grid-column-end: 7;
 }
 /* image container */
 .personal-image-container {
+  width: 500px;
+  height: 500px;
+}
+
+.personal-image-container img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
