--- a/src/components/HomeComponents/styles/homeIntroStyles.css
+++ b/src/components/HomeComponents/styles/homeIntroStyles.css
@@ -4,6 +4,7 @@
   grid-template-rows: repeat(4, 1fr);
   margin-top: 100px;
   row-gap: 20px;
+  border: 2px solid red;
 }
 
 .content-title {
@@ -55,12 +56,6 @@
   font-weight: 500;
 }
 
-/* arrow animation */
-.arrow-container {
-  grid-column-start: 6;
-  grid-column-end: 7;
-}
-
 /* second content */
 .second-content {
   grid-column-start: 6;
@@ -95,12 +90,5 @@
     grid-column-end: 14;
     /* justify-self: center; */
     text-align: right;
-  }
-
-  /*arrow*/
-  .arrow-container {
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 3;
   }
 }
