created intro-1 and 2 section/title

--- a/src/components/HomeComponents/styles/introContentStyles.css
+++ b/src/components/HomeComponents/styles/introContentStyles.css
@@ -26,6 +26,10 @@
   padding-bottom: 2rem;
 }
 
+.intro-message-2__title {
+  display: none;
+}
+
 .intro-message-2 {
   border: 2px solid pink;
   grid-column-start: 1;
@@ -71,6 +75,23 @@
   }
   .intro-message-1 {
     grid-column-start: 4;
-    grid-column-end: 11;
+    grid-column-end: 12;
+  }
+  .intro-message-2 {
+    grid-column-start: 8;
+    grid-column-end: 12;
+  }
+
+  .intro-message-2__title {
+    height: 50px;
+    border: 2px solid crimson;
+    display: block;
+    grid-column-start: 4;
+    grid-column-end: 7;
+  }
+
+  .intro-message-2__title h4 {
+    font-size: 20px;
+    font-weight: 500;
   }
 }
