--- a/src/components/HomeComponents/styles/introContentStyles.css
+++ b/src/components/HomeComponents/styles/introContentStyles.css
@@ -91,7 +91,19 @@
   }
 
   .intro-message-2__title h4 {
-    font-size: 20px;
+    font-size: 25px;
     font-weight: 500;
+  }
+
+  .intro-button {
+    width: 225px;
+    height: 225px;
+  }
+
+  .intro-button-container {
+    grid-column-start: 4;
+    position: relative;
+    top: -110%;
+    left: 25%;
   }
 }
