--- a/src/components/HomeComponents/styles/headerStyles.css
+++ b/src/components/HomeComponents/styles/headerStyles.css
@@ -5,10 +5,10 @@
   line-height: 1.4rem;
   text-decoration-style: solid;
   text-decoration-color: rgb(225, 223, 221);
-  position: fixed;
+  /* position: fixed; */
   top: 0;
-  width: 100%;
-  z-index: 101;
+  /* width: 100%; */
+  /* z-index: 101; */
   border: 2px solid red;
 }
 
@@ -28,8 +28,9 @@ body:not(.header) {
 }
 
 .header_menu {
-  grid-column: 6/7;
-  justify-self: flex-end;
+  grid-column: 4/8;
+  border: 2px solid gray;
+  justify-self: end;
   font-size: 22px;
 }
 
