--- a/src/components/HomeComponents/styles/headerStyles.css
+++ b/src/components/HomeComponents/styles/headerStyles.css
@@ -1,19 +1,20 @@
 .header {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
-  padding-top: 42px;
+  padding-top: 32px;
   line-height: 1.4rem;
   text-decoration-style: solid;
   text-decoration-color: rgb(225, 223, 221);
-  /* position: fixed; */
   top: 0;
-  /* width: 100%; */
-  /* z-index: 101; */
+  position: sticky;
+  /* width: inherit;
+  max-width: inherit; */
+  z-index: 101;
   border: 2px solid red;
 }
 
 body:not(.header) {
-  padding: 0 70px;
+  padding: 0 30px;
 }
 
 .header_logo {
@@ -184,6 +185,7 @@ body:not(.header) {
     grid-template-columns: repeat(13, minmax(0, 13));
     column-gap: 1rem;
     /* font-size: 1.8rem; */
+    padding-top: 42px;
     font-size: 1.4rem;
     line-height: 25px;
   }
@@ -196,5 +198,10 @@ body:not(.header) {
   .header-name a {
     text-decoration: none;
     color: inherit;
+    /* position: fixed; */
+  }
+
+  body:not(.header) {
+    padding: 0 70px;
   }
 }
