--- a/src/components/HomeComponents/styles/homeIntroStyles.css
+++ b/src/components/HomeComponents/styles/homeIntroStyles.css
@@ -1,10 +1,10 @@
 .content {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
-  grid-template-rows: repeat(4, 1fr);
+  /* grid-template-rows: repeat(4, 250px); */
   margin-top: 100px;
   row-gap: 20px;
-  border: 2px solid red;
+  padding-bottom: 170px;
 }
 
 .content-title {
@@ -26,15 +26,20 @@
 
 /* image */
 .image-container {
-  /* width: 100%;
-  height: 100%; */
-  background: lightgray;
-  grid-column: 1 / 7;
-  grid-row-start: 2;
-  grid-row-end: 3;
+  grid-column: 1/7;
+  /* justify-self: left; */
+}
+
+.image-first-container {
+  height: 450px;
+  max-width: 100%;
 }
 
 .image-container img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  transform: scaleX(-1);
 }
 
 .name {
@@ -46,7 +51,6 @@
 }
 
 .name-first {
-  background-color: yellow;
 }
 .name-last {
 }
@@ -60,7 +64,7 @@
   .content {
     display: grid;
     grid-template-columns: repeat(13, 1fr);
-    grid-template-rows: repeat(4, 1fr);
+    /* grid-template-rows: repeat(4, 1fr); */
   }
   .content-title__ui > span,
   .content-title > span {
@@ -76,7 +80,12 @@
 
   /* image */
   .image-container {
-    grid-column: 1 /6;
+    grid-column: 1 /11;
+  }
+
+  .image-first-container {
+    height: 450px;
+    max-width: 800px;
   }
 
   .name {
