--- a/src/components/HomeComponents/styles/homeIntroStyles.css
+++ b/src/components/HomeComponents/styles/homeIntroStyles.css
@@ -26,13 +26,14 @@
 
 /* image */
 .image-container {
-  grid-column: 1/7;
-  /* justify-self: left; */
-}
-
-.image-first-container {
-  height: 450px;
-  max-width: 100%;
+  grid-column-start: 1;
+  grid-column-end: 4;
+  min-width: 350px;
+  justify-self: left;
+  height: 470px;
+  transition-duration: 2s;
+  transition-property: min-width, height;
+  transition-timing-function: ease-in-out;
 }
 
 .image-container img {
@@ -80,12 +81,17 @@
 
   /* image */
   .image-container {
-    grid-column: 1 /11;
+    grid-column-end: 8;
+    min-width: 700px;
+    height: 400px;
   }
 
-  .image-first-container {
-    height: 450px;
-    max-width: 800px;
+  .image-container img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    transform: scaleX(-1);
+    /* transform: scaleY(4); */
   }
 
   .name {
