--- a/src/components/HomeComponents/styles/projectContentStyles.css
+++ b/src/components/HomeComponents/styles/projectContentStyles.css
@@ -36,9 +36,13 @@
 .project-1 {
   justify-self: baseline;
   margin-top: 5rem;
-  border: 2px solid cyan;
+
   grid-column-start: 1;
   grid-column-end: 8;
+}
+
+.project-1 .project-1__button {
+  display: none;
 }
 
 .project-1__title {
@@ -111,16 +115,44 @@
     line-height: 20px;
     text-transform: uppercase;
   }
-
+  /* konbini title */
   .project-1 {
+    margin-top: 5rem;
     grid-column-start: 1;
     grid-column-end: 6;
+    margin-top: 8rem;
+    position: realtive;
+    border: 2px solid cyan;
+    /* height: 300px; */
+    position: relative;
+  }
+
+  .project-1 .project-1__title,
+  .project-1__role {
+    margin-top: 0;
+    line-height: 40px;
+  }
+
+  .project-1 .project-1__role {
+    font-size: 20px;
+  }
+
+  .project-1 .project-1__button {
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
   }
 
   .project-img-container {
+    margin-top: 8rem;
     border: 2px solid red;
     grid-column-start: 6;
     grid-column-end: 12;
     height: 450px;
+  }
+  .project-button {
+    display: none;
   }
 }
