--- a/src/components/HomeComponents/styles/projectContentStyles.css
+++ b/src/components/HomeComponents/styles/projectContentStyles.css
@@ -1,12 +1,10 @@
 .project-container {
-  margin-top: 5rem;
-  border: 2px solid red;
+  margin-top: 16rem;
   display: grid;
   grid-template-columns: repeat(7, 1fr);
 }
 
 .project-title {
-  border: 2px solid blue;
   grid-column-start: 1;
 }
 
@@ -16,7 +14,6 @@
 }
 
 .project-title-2 {
-  border: 2px solid green;
   grid-column-start: 4;
   grid-column-end: 5;
   justify-self: center;
@@ -122,7 +119,6 @@
     grid-column-end: 6;
     margin-top: 8rem;
     position: realtive;
-    border: 2px solid cyan;
     /* height: 300px; */
     position: relative;
   }
@@ -145,9 +141,17 @@
     transform: translateX(-50%);
   }
 
+  .project-1 .project-1__link {
+    text-decoration: none;
+    color: inherit;
+    font-size: 20px;
+    font-weight: 500;
+    border-bottom: 2px solid black;
+    padding-bottom: 2px;
+  }
+
   .project-img-container {
     margin-top: 8rem;
-    border: 2px solid red;
     grid-column-start: 6;
     grid-column-end: 12;
     height: 450px;
