--- a/src/components/WorkComponents/styles/projectCardStyles.css
+++ b/src/components/WorkComponents/styles/projectCardStyles.css
@@ -1,23 +1,40 @@
+.project-card-container {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: 100px 100px 1fr;
+  row-gap: 25px;
+  padding-top: 4rem;
+}
+
 .project-card {
-  border: 2px solid red;
-  height: 500px;
-  display: flex;
-  flex-direction: row;
+  grid-column-start: 1;
+}
+
+.project-description-container {
+  grid-column-start: 1;
+  grid-column-end: 5;
 }
 
 .project-card__title {
-  border: 2px solid blue;
+  line-height: 48px;
   font-size: 56px;
   font-weight: 500;
   text-transform: uppercase;
 }
 
 .project-card__description {
-  border: 2px solid green;
+  font-size: 20px;
+  text-transform: uppercase;
 }
 
 .project-image-container {
-  width: 500px;
-  height: 500px;
-  border: 2px solid purple;
+  grid-row-start: 3;
+  grid-column-start: 1;
+  grid-column-end: 8;
+}
+
+.project-image-container img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
