--- a/src/components/WorkComponents/styles/workStyles.css
+++ b/src/components/WorkComponents/styles/workStyles.css
@@ -8,6 +8,7 @@
   margin-top: 10rem;
   border: 2px solid green;
   grid-column-start: 1;
+  grid-column-end: 3;
 }
 
 .work-title-1 h4 {
@@ -56,7 +57,6 @@
 }
 
 .work-projectList {
-  border: 2px solid cyan;
   grid-column-start: 1;
   grid-column-end: 8;
   margin-top: 10rem;
