--- a/src/components/WorkComponents/styles/projectCardStyles.css
+++ b/src/components/WorkComponents/styles/projectCardStyles.css
@@ -31,10 +31,35 @@
   grid-row-start: 3;
   grid-column-start: 1;
   grid-column-end: 8;
+  position: relative;
 }
 
 .project-image-container img {
   object-fit: cover;
   width: 100%;
   height: 100%;
+}
+
+.project-card-button-container {
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -50px;
+  margin-left: -50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  background-color: white;
+}
+
+.project-card-button-container p {
+  text-transform: uppercase;
+  font-size: 20px;
+}
+
+.project-card-button-container:hover {
+  cursor: pointer;
 }
