--- a/src/components/WorkComponents/styles/workStyles.css
+++ b/src/components/WorkComponents/styles/workStyles.css
@@ -1,7 +1,6 @@
 .work-container {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
-  border: 2px solid red;
 }
 
 .work-title-1 {
@@ -63,4 +62,54 @@
 }
 
 .work-contact-container {
+}
+
+@media (min-width: 1100px) {
+  .work-container {
+    display: grid;
+    grid-template-columns: repeat(13, 1fr);
+    border: 2px solid red;
+  }
+
+  .work-title-1 {
+    margin-top: 0;
+    border: 2px solid green;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    align-self: center;
+    margin-top: 8rem;
+  }
+
+  .work-title-2 {
+    margin-top: 11rem;
+    border: 2px solid blue;
+    grid-column-start: 4;
+    grid-column-end: 12;
+    align-self: end;
+  }
+
+  .work-title-2 h3 {
+    font-size: 64px;
+  }
+
+  .work-content-title {
+    border: 2px solid orange;
+    grid-column-start: 4;
+    grid-column-end: 12;
+    width: 600px;
+    display: flex;
+    justify-content: flex-start;
+    margin-top: 3rem;
+  }
+
+  .work-content-title p {
+    padding-top: 0;
+    width: 60%;
+    padding-left: 3rem;
+  }
+
+  .work-projectList {
+    margin-top: 5rem;
+    grid-column-end: -1;
+  }
 }
