--- a/src/components/WorkComponents/styles/workStyles.css
+++ b/src/components/WorkComponents/styles/workStyles.css
@@ -1,11 +1,11 @@
 .work-container {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
+  column-gap: 32px;
 }
 
 .work-title-1 {
   margin-top: 10rem;
-  border: 2px solid green;
   grid-column-start: 1;
   grid-column-end: 3;
 }
@@ -17,7 +17,6 @@
 
 .work-title-2 {
   margin-top: 3rem;
-  border: 2px solid blue;
   grid-column-start: 1;
   grid-column-end: 8;
 }
@@ -34,12 +33,10 @@
   padding-left: 10px;
   font-size: 20px;
   font-weight: 500;
-  border: 2px solid pink;
 }
 
 .work-content-title {
   margin-top: 5rem;
-  border: 2px solid orange;
   grid-column-start: 1;
   grid-column-end: 8;
 }
@@ -62,18 +59,17 @@
 }
 
 .work-contact-container {
+  padding-bottom: 10rem;
 }
 
 @media (min-width: 1100px) {
   .work-container {
     display: grid;
     grid-template-columns: repeat(13, 1fr);
-    border: 2px solid red;
   }
 
   .work-title-1 {
     margin-top: 0;
-    border: 2px solid green;
     grid-column-start: 1;
     grid-column-end: 3;
     align-self: center;
@@ -82,7 +78,6 @@
 
   .work-title-2 {
     margin-top: 11rem;
-    border: 2px solid blue;
     grid-column-start: 4;
     grid-column-end: 12;
     align-self: end;
@@ -93,7 +88,6 @@
   }
 
   .work-content-title {
-    border: 2px solid orange;
     grid-column-start: 4;
     grid-column-end: 12;
     width: 600px;
