--- a/src/components/AboutComponents/styles/about.css
+++ b/src/components/AboutComponents/styles/about.css
@@ -74,14 +74,24 @@
   grid-template-columns: repeat(7, 1fr);
   grid-template-rows: min-content;
   border: 2px solid blue;
+  margin-top: 15rem;
 }
 
 .about-section2-number {
   grid-column-start: 1;
+  font-size: 20px;
+  font-weight: 500;
+  padding-bottom: 2rem;
 }
 
 .about-section2-title {
   grid-column-start: 1;
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  line-height: 50px;
+  align-self: end;
+  font-weight: 500;
+  padding-bottom: 10px;
 }
 
 .about-section2 p {
