--- a/src/components/AboutComponents/styles/aboutServiceCardStyle.css
+++ b/src/components/AboutComponents/styles/aboutServiceCardStyle.css
@@ -1,11 +1,9 @@
 .aboutServiceCard-item {
-  /* display: grid; */
-  border: 2px solid red;
-  /* grid-template-columns: repeat(8, 1fr); */
+  border-bottom: 2px solid black;
 }
 .aboutServiceCard-item button {
   background-color: rgba(0, 0, 0, 0);
-  border-bottom-color: rgb(0, 0, 0);
+  /* border-bottom-color: rgb(0, 0, 0); */
   color: rgb(0, 0, 0);
   cursor: pointer;
   display: flex;
@@ -15,11 +13,17 @@
   grid-column-start: 1;
   grid-column-end: 9;
   width: 100%;
+  /**/
+  border-bottom-width: 0px;
+  border-image-outset: 0;
+  border-left-width: 0px;
+  border-right-width: 0px;
+  border-top-style: none;
+  color: rgb(0, 0, 0);
+  line-height: 18.4px;
 }
 
 .aboutServiceCard-item button h4 {
-  background: yellow;
-
   color: rgb(0, 0, 0);
   cursor: pointer;
   font-family: PP Neue Montreal, -apple-system, BlinkMacSystemFont, Segoe UI,
@@ -38,11 +42,14 @@
   padding-top: 0px;
   text-align: left;
   text-transform: none;
-  /* width: 508.333px; */
+}
+
+.aboutServiceCard-active {
+  padding-bottom: 50px;
+  padding-top: 5px;
 }
 
 .aboutServiceCard-item button span {
-  background: pink;
   cursor: pointer;
   height: 21px;
   position: relative;
@@ -61,13 +68,9 @@
   width: 21px;
   transition: transform 500ms ease;
 }
-.aboutServiceCard-item button span:after {
+/* .aboutServiceCard-item button span:after {
   transform-origin: center;
-}
-
-.aboutServiceCard-item button .collapsed::before {
-  transform: rotate(180deg);
-}
+} */
 
 .aboutServiceCard-item button .collapsed::after {
   transform: rotate(90deg);
