fixed services button alignment

--- a/src/components/HomeComponents/styles/introContentStyles.css
+++ b/src/components/HomeComponents/styles/introContentStyles.css
@@ -104,16 +104,15 @@
     grid-column-end: -1;
     font-size: 20px;
     font-weight: 500;
-    padding-top: 3rem;
-    border-bottom: 2px solid black;
-    padding-bottom: 10px;
-    border-bottom: 2px solid black;
-    text-align: center;
-    width: 51%;
+    margin-top: 3rem;
+    position: relative;
+
+    min-width: 100px;
   }
 
   .intro-button__text {
     color: black;
     font-size: 22px;
+    border-bottom: 2px solid rgb(88, 86, 86);
   }
 }
