--- a/src/components/AboutComponents/styles/about.css
+++ b/src/components/AboutComponents/styles/about.css
@@ -29,6 +29,7 @@
   margin: 20px 0 20px 0;
   height: 500px;
   background: lightgray;
+  max-width: 495px;
 }
 
 .about-section1-imageContainer1 img {
@@ -56,8 +57,10 @@
 
 .about-section1-imageContainer2 {
   grid-column-start: 1;
-  grid-column-end: 5;
+  /* grid-column-end: 5; */
   height: 450px;
+  min-width: 275px;
+  max-width: 290px;
   padding-top: 3rem;
 }
 
@@ -110,6 +113,7 @@
   margin-top: 15rem;
   display: grid;
   grid-template-columns: repeat(7, 1fr);
+  margin-bottom: 15rem;
 }
 
 .about-section3-number {
@@ -121,8 +125,7 @@
 
 .about-section3-title {
   grid-column-start: 1;
-  grid-column-start: 1;
-  grid-column-end: 5;
+  grid-column-end: 3;
   font-size: 1.5rem;
   text-transform: uppercase;
   line-height: 50px;
@@ -133,15 +136,96 @@
 
 .about-section3-title2 {
   grid-column-start: 5;
-  grid-column-end: 7;
+  grid-column-end: 8;
   font-size: 1.5rem;
   font-weight: 500;
   text-transform: uppercase;
+  min-width: 350px;
 }
 .about-section3-email {
+  margin-top: 8rem;
+  justify-self: center;
+  text-align: center;
   grid-column-start: 1;
   grid-column-end: 8;
   font-size: 4rem;
   text-transform: uppercase;
   font-weight: 500;
+}
+
+.about-section3 > * {
+  line-height: 50px;
+}
+
+@media (min-width: 1100px) {
+  .about-section1 {
+    grid-template-columns: repeat(12, 1fr);
+    column-gap: 32px;
+    grid-template-rows: min-content;
+    grid-template-rows: min-content;
+  }
+
+  .about-section1-title {
+    grid-column-start: 2;
+    font-size: 6rem;
+    line-height: 75px;
+  }
+
+  .about-section1-imageContainer1 {
+    grid-column-start: 2;
+    grid-column-end: 7;
+    height: 700px;
+    min-width: 700px;
+  }
+
+  .about-section1-city {
+    grid-column-start: 2;
+    font-size: 6rem;
+    line-height: 75px;
+    font-weight: 500;
+  }
+
+  .about-section1 .about-section1__name {
+    grid-column-start: 2;
+  }
+
+  .about-section1 .about-section1__bio {
+    grid-column-start: 6;
+    grid-column-end: 10;
+    grid-row-start: 4;
+  }
+
+  .about-section1 .about-section1__name,
+  .about-section1 .about-section1__bio {
+    margin-top: 8rem;
+    font-size: 30px;
+    line-height: 40px;
+  }
+
+  .about-section1 .about-section1__bio2 {
+    margin-top: 2rem;
+    grid-column-start: 6;
+    grid-column-end: 10;
+    grid-row-start: 5;
+    font-size: 30px;
+    line-height: 40px;
+  }
+
+  .about-section1-imageContainer2 {
+    grid-column-start: 6;
+    grid-row-start: 6;
+
+    height: 600px;
+    min-width: 400px;
+    padding-top: 3rem;
+
+    /* max-height: 400px; */
+    /* min-width: 300px; */
+  }
+
+  .about-section1-imageContainer2 img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+  }
 }
