--- a/src/components/AboutComponents/styles/about.css
+++ b/src/components/AboutComponents/styles/about.css
@@ -75,7 +75,6 @@
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   grid-template-rows: min-content;
-
   margin-top: 15rem;
 }
 
@@ -88,6 +87,7 @@
 
 .about-section2-title {
   grid-column-start: 1;
+  grid-column-end: 3;
   font-size: 3.5rem;
   text-transform: uppercase;
   line-height: 50px;
@@ -125,13 +125,12 @@
 
 .about-section3-title {
   grid-column-start: 1;
-  grid-column-end: 3;
+  grid-column-end: 5;
   font-size: 1.5rem;
   text-transform: uppercase;
   line-height: 50px;
   align-self: end;
   font-weight: 500;
-  padding-bottom: 10px;
 }
 
 .about-section3-title2 {
@@ -167,6 +166,7 @@
 
   .about-section1-title {
     grid-column-start: 2;
+
     font-size: 6rem;
     line-height: 75px;
   }
@@ -187,12 +187,14 @@
 
   .about-section1 .about-section1__name {
     grid-column-start: 2;
+    min-width: 420px;
   }
 
   .about-section1 .about-section1__bio {
     grid-column-start: 6;
-    grid-column-end: 10;
+    grid-column-end: 9;
     grid-row-start: 4;
+    min-width: 500px;
   }
 
   .about-section1 .about-section1__name,
@@ -205,19 +207,21 @@
   .about-section1 .about-section1__bio2 {
     margin-top: 2rem;
     grid-column-start: 6;
-    grid-column-end: 10;
+    grid-column-end: 9;
     grid-row-start: 5;
     font-size: 30px;
     line-height: 40px;
+    min-width: 500px;
   }
 
   .about-section1-imageContainer2 {
     grid-column-start: 6;
+    grid-column-end: 9;
     grid-row-start: 6;
 
     height: 600px;
     min-width: 400px;
-    padding-top: 3rem;
+    padding-top: 10rem;
 
     /* max-height: 400px; */
     /* min-width: 300px; */
@@ -227,5 +231,81 @@
     object-fit: cover;
     width: 100%;
     height: 100%;
+  }
+
+  /*Services Section*/
+
+  .about-section2 {
+    display: grid;
+    grid-template-columns: repeat(13, 1fr);
+    grid-template-rows: min-content;
+    margin-top: 15rem;
+    column-gap: 32px;
+  }
+
+  .about-section2-number {
+    grid-column-start: 1;
+    font-size: 20px;
+    font-weight: 500;
+    padding-bottom: 2rem;
+  }
+
+  .about-section2-title {
+    grid-column-start: 6;
+    grid-column-end: 9;
+    font-size: 5rem;
+    text-transform: uppercase;
+    font-weight: 500;
+    padding-bottom: 10rem;
+  }
+
+  .about-section2__serviceCards {
+    grid-column-start: 4;
+    grid-column-end: 12;
+  }
+
+  /* Contact Section */
+  .about-section3 {
+    grid-template-rows: min-content;
+    column-gap: 32px;
+    margin-top: 15rem;
+    display: grid;
+    grid-template-columns: repeat(13, 1fr);
+    margin-bottom: 15rem;
+  }
+
+  .about-section3-title {
+    grid-column-start: 4;
+    grid-column-end: 7;
+    font-size: 2.5rem;
+    text-transform: uppercase;
+    line-height: 50px;
+    font-weight: 500;
+    align-self: start;
+    min-width: 260px;
+  }
+
+  .about-section3-title2 {
+    grid-column-start: 9;
+    grid-column-end: 14;
+    font-size: 2.5rem;
+    font-weight: 500;
+    text-transform: uppercase;
+    min-width: 490px;
+  }
+
+  .about-section3-email {
+    margin-top: 8rem;
+    justify-self: center;
+    text-align: center;
+    grid-column-start: 5;
+    grid-column-end: 10;
+    font-size: 6rem;
+    text-transform: uppercase;
+    font-weight: 500;
+  }
+
+  .about-section3 > * {
+    line-height: 75px;
   }
 }
