--- a/src/components/AboutComponents/styles/aboutServiceCardStyle.css
+++ b/src/components/AboutComponents/styles/aboutServiceCardStyle.css
@@ -76,3 +76,30 @@
 .aboutServiceCard-item button .collapsed::after {
   transform: rotate(90deg);
 }
+
+@media (min-width: 1100px) {
+  .aboutServiceCard-item button h4 {
+    color: rgb(0, 0, 0);
+    cursor: pointer;
+    font-family: PP Neue Montreal, -apple-system, BlinkMacSystemFont, Segoe UI,
+      Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
+      sans-serif;
+    font-size: 2.5rem;
+    font-weight: 500;
+    line-height: 30px;
+    margin-bottom: 20px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    padding-bottom: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-top: 0px;
+    text-align: left;
+    text-transform: none;
+  }
+
+  .aboutServiceCard-active p {
+    font-size: 30px;
+  }
+}
