--- a/src/components/HomeComponents/styles/introContentStyles.css
+++ b/src/components/HomeComponents/styles/introContentStyles.css
@@ -4,6 +4,7 @@
 }
 
 .title {
+  padding-bottom: 2rem;
 }
 
 .title h4 {
@@ -74,12 +75,12 @@
   }
   .intro-message-1 {
     grid-column-start: 4;
-    grid-column-end: 12;
+    grid-column-end: 11;
   }
   .intro-message-2 {
     padding-top: 5rem;
     grid-column-start: 8;
-    grid-column-end: 12;
+    grid-column-end: 11;
   }
 
   .intro-message-2__title {
@@ -106,7 +107,6 @@
     font-weight: 500;
     margin-top: 3rem;
     position: relative;
-
     min-width: 100px;
   }
 
