--- a/src/components/HomeComponents/styles/aboutContentStyles.css
+++ b/src/components/HomeComponents/styles/aboutContentStyles.css
@@ -49,6 +49,7 @@
 }
 
 .aboutContent-image img {
+  filter: grayscale(60%);
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -156,8 +157,9 @@
     width: 50%;
   }
   .aboutContent-text p {
-    font-size: 30px;
+    font-size: 22px;
     line-height: 26px;
+    max-width: 300px;
   }
 
   .aboutContent-text__button {
@@ -177,7 +179,7 @@
   .aboutContent-text-2__button {
     text-decoration: none;
     color: inherit;
-    font-size: 20px;
+    font-size: 22px;
     font-weight: 500;
     border-bottom: 2px solid black;
     padding-bottom: 1px;
