--- a/src/components/HomeComponents/styles/introContentStyles.css
+++ b/src/components/HomeComponents/styles/introContentStyles.css
@@ -51,7 +51,6 @@
   align-items: center;
   display: flex;
   justify-content: center;
-
   cursor: pointer;
 }
 
@@ -59,6 +58,9 @@
   color: #e1dfdd;
   font-size: 2rem;
   text-decoration: none;
+  transition-duration: 1s;
+  transition-property: min-width;
+  transition-timing-function: ease-in-out;
 }
 
 .intro-button-large__text {
@@ -69,10 +71,7 @@
   .intro-container {
     grid-template-columns: repeat(13, 1fr);
   }
-  .title {
-    /* position: relative;
-    top: -15px; */
-  }
+
   .intro-message-1 {
     grid-column-start: 4;
     grid-column-end: 11;
@@ -114,5 +113,8 @@
     color: black;
     font-size: 22px;
     border-bottom: 2px solid rgb(88, 86, 86);
+  }
+  .into-button__text:hover{
+    
   }
 }
