--- a/src/components/HomeComponents/styles/projectContentStyles.css
+++ b/src/components/HomeComponents/styles/projectContentStyles.css
@@ -17,6 +17,7 @@
   grid-column-start: 4;
   grid-column-end: 5;
   justify-self: center;
+  max-width: 220px;
 }
 
 .project-title-2 h4 {
@@ -59,9 +60,14 @@
   margin-top: 3rem;
   grid-column-start: 1;
   grid-column-end: 8;
-  height: 300px;
-  width: 100%;
+  max-width: 700px;
   background-color: lightgray;
+}
+
+.project-img-container img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
 .project-button {
@@ -138,13 +144,14 @@
     position: absolute;
     bottom: 0;
     left: 50%;
+    width: 200px;
     transform: translateX(-50%);
   }
 
   .project-1 .project-1__link {
     text-decoration: none;
     color: inherit;
-    font-size: 20px;
+    font-size: 22px;
     font-weight: 500;
     border-bottom: 2px solid black;
     padding-bottom: 2px;
