--- a/src/components/HomeComponents/styles/aboutContentStyles.css
+++ b/src/components/HomeComponents/styles/aboutContentStyles.css
@@ -124,22 +124,29 @@
   display: none;
 }
 
+.aboutContent-active__text {
+  display: none;
+}
+
 @media (min-width: 1100px) {
   .aboutContent-container {
     margin-top: 20rem;
     grid-template-columns: repeat(13, 1fr);
     max-width: 100%;
     border: 2px solid red;
+    column-gap: 32px;
+    height: 100%;
   }
 
   .aboutContent-title {
     grid-row-start: 1;
     grid-column-start: 1;
     grid-column-end: 4;
+    min-width: 154px;
   }
 
   .aboutContent-title h4 {
-    font-size: 30px;
+    font-size: 25px;
     font-weight: 500;
   }
 
@@ -166,7 +173,7 @@
   }
 
   .aboutContent-title-3 h4 {
-    font-size: 30px;
+    font-size: 25px;
     font-weight: 500;
     text-transform: uppercase;
   }
@@ -183,32 +190,46 @@
   }
 
   .aboutContent-title-4 h4 {
-    font-size: 30px;
+    font-size: 25px;
     font-weight: 500;
     text-transform: uppercase;
   }
 
   /* image container*/
   .aboutContent-image {
+    margin-top: 5rem;
     grid-column-start: 3;
-    grid-column-end: 9;
+    grid-column-end: 8;
+    max-width: 900px;
+    min-height: 700px;
+    padding: 0;
+  }
+
+  .aboutContent-hobbies1 {
+    display: flex;
+    justify-content: space-evenly;
+    border: 2px solid green;
+  }
+  .aboutContent-hobbies2 {
+    display: flex;
+    justify-content: space-evenly;
+    border: 2px solid blue;
   }
 
   .aboutContent-hobbies {
     grid-column-start: 8;
-    grid-row-start: 4;
-    margin-top: 0;
+    grid-column-end: 10;
+    grid-row-start: 2;
+    margin-top: 5rem;
     width: 500px;
-  }
-
-  .aboutContent-hobbies .aboutContent-image {
-    /* width: 500px;
-    height: 420px; */
+    height: 100%;
+    border: 2px solid red;
   }
 
   .aboutContent-hobbies h3 {
-    font-size: 80px;
+    font-size: 60px;
     line-height: 80px;
+    display: inline-block;
   }
 
   .aboutContent-image img {
@@ -223,8 +244,8 @@
   }
 
   .aboutContent-text-1 {
-    width: 50%;
     border: 2px solid blue;
+    grid-column-start: 8;
   }
   .aboutContent-text p {
     font-size: 22px;
@@ -260,5 +281,25 @@
 
   .aboutContent-title-2 {
     display: none;
+  }
+  .aboutContent-text-1 {
+    display: none;
+  }
+
+  /* active text info */
+  .aboutContent-active__text {
+    display: block;
+    border: 2px solid cyan;
+    height: 100%;
+  }
+
+  .aboutContent-active__text p {
+    font-size: 25px;
+    padding: 25px;
+    line-height: 30px;
+  }
+
+  .aboutContent-active__text .aboutContent-text-2__button {
+    margin-left: 25px;
   }
 }
