finished home responsive design

--- a/src/components/HomeComponents/styles/aboutContentStyles.css
+++ b/src/components/HomeComponents/styles/aboutContentStyles.css
@@ -16,8 +16,9 @@
 }
 .aboutContent-title h4 {
   padding-top: 2rem;
-  font-size: 56px;
+  font-size: 25px;
   font-weight: 500;
+  line-height: 20px;
 }
 .aboutContent-title-2 {
   grid-column-start: 1;
@@ -133,7 +134,6 @@
     margin-top: 20rem;
     grid-template-columns: repeat(13, 1fr);
     max-width: 100%;
-    border: 2px solid red;
     column-gap: 32px;
     height: 100%;
   }
@@ -148,6 +148,7 @@
   .aboutContent-title h4 {
     font-size: 25px;
     font-weight: 500;
+    line-height: 20px;
   }
 
   .aboutContent-title-2 {
@@ -166,10 +167,10 @@
     grid-column-start: 7;
     grid-column-end: 8;
     align-self: flex-end;
-    border: 2px solid green;
     width: min-content;
     min-width: 370px;
     grid-template-rows: min-content;
+    line-height: 20px;
   }
 
   .aboutContent-title-3 h4 {
@@ -182,22 +183,22 @@
   .aboutContent-title-4 {
     display: block;
     grid-column-start: 10;
-    grid-column-end: 14;
+    grid-column-end: 12;
     justify-self: end;
     align-self: flex-end;
-    border: 2px solid red;
-    min-width: 250px;
+    line-height: 20px;
   }
 
   .aboutContent-title-4 h4 {
     font-size: 25px;
     font-weight: 500;
+    /* letter-spacing: 0px; */
     text-transform: uppercase;
   }
 
   /* image container*/
   .aboutContent-image {
-    margin-top: 5rem;
+    margin-top: 10rem;
     grid-column-start: 3;
     grid-column-end: 8;
     max-width: 900px;
@@ -208,22 +209,19 @@
   .aboutContent-hobbies1 {
     display: flex;
     justify-content: space-evenly;
-    border: 2px solid green;
   }
   .aboutContent-hobbies2 {
     display: flex;
     justify-content: space-evenly;
-    border: 2px solid blue;
   }
 
   .aboutContent-hobbies {
     grid-column-start: 8;
     grid-column-end: 10;
     grid-row-start: 2;
-    margin-top: 5rem;
+    margin-top: 10rem;
     width: 500px;
     height: 100%;
-    border: 2px solid red;
   }
 
   .aboutContent-hobbies h3 {
@@ -244,7 +242,6 @@
   }
 
   .aboutContent-text-1 {
-    border: 2px solid blue;
     grid-column-start: 8;
   }
   .aboutContent-text p {
@@ -289,8 +286,11 @@
   /* active text info */
   .aboutContent-active__text {
     display: block;
-    border: 2px solid cyan;
     height: 100%;
+  }
+
+  .aboutContent-active__text h4 {
+    margin-top: 19rem;
   }
 
   .aboutContent-active__text p {
