--- a/src/components/HomeComponents/styles/projectContentStyles.css
+++ b/src/components/HomeComponents/styles/projectContentStyles.css
@@ -8,16 +8,25 @@
   grid-column-start: 1;
 }
 
-.project-title h4 {
+.project-title h3 {
   font-size: 20px;
   font-weight: 500;
 }
 
+.project-title h4 {
+  padding-top: 32px;
+  font-weight: 500;
+  font-size: 25px;
+  line-height: 20px;
+  text-transform: uppercase;
+}
+
 .project-title-2 {
-  grid-column-start: 4;
-  grid-column-end: 5;
-  justify-self: center;
-  max-width: 220px;
+  display: none;
+  /* grid-column-start: 4;
+  grid-column-end: 5; */
+
+  /* max-width: 220px; */
 }
 
 .project-title-2 h4 {
@@ -96,8 +105,10 @@
   }
 
   .project-title-2 {
+    display: block;
     grid-column-start: 6;
-    grid-column-end: 8;
+    grid-column-end: 9;
+    padding-top: 52px;
   }
 
   .project-title-2 h4 {
@@ -110,6 +121,7 @@
     display: block;
     grid-column-start: 11;
     grid-column-end: 12;
+    padding-top: 52px;
   }
 
   .project-title-3 h4 {
@@ -160,8 +172,9 @@
   .project-img-container {
     margin-top: 8rem;
     grid-column-start: 6;
-    grid-column-end: 12;
-    height: 450px;
+    grid-column-end: 14;
+    min-height: 500px;
+    max-width: 900px;
   }
   .project-button {
     display: none;
